--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -55,7 +55,9 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-/generated/prisma
+/generated
 
 # Uploaded files
 /uploads
+
+/docs
