Используйте npx для запуска команды lerna build в процессе развертывания

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,6 @@ jobs:
                       git checkout main
                       git pull
                       pnpm i
-                      lerna run build
+                      npx lerna run build
                       curl --basic --user "${{ secrets.ALWAYSDATA_TOKEN }} account=${{ secrets.ALWAYSDATA_ACCOUNT }}:" --request POST https://api.alwaysdata.com/v1/site/${{ secrets.ALWAYSDATA_BACKEND_SITE_ID }}/restart/
                       curl --basic --user "${{ secrets.ALWAYSDATA_TOKEN }} account=${{ secrets.ALWAYSDATA_ACCOUNT }}:" --request POST https://api.alwaysdata.com/v1/site/${{ secrets.ALWAYSDATA_FRONTEND_SITE_ID }}/restart/
