--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -68,6 +68,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/pdfkit": "^0.13.5",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
