--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,6 +48,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "jsonwebtoken": "^9.0.2",
+    "exceljs": "^4.4.0",
+    "pdfkit": "^0.17.1",
     "multer": "^2.0.1",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
@@ -68,7 +70,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
-    "@types/pdfkit": "^0.13.5",
+    "@types/pdfkit": "^0.17.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
