--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -87,7 +87,10 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "mammoth": "^1.9.1",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
