--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -49,13 +49,16 @@
     "class-validator": "^0.14.2",
     "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.1",
     "multer": "^2.0.1",
+    "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "swagger-typescript-api": "^13.2.7"
+    "swagger-typescript-api": "^13.2.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -87,10 +90,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "mammoth": "^1.9.1",
-    "pdf-parse": "^1.1.1",
-    "uuid": "^9.0.0"
+    "typescript-eslint": "^8.20.0"
   },
   "jest": {
     "moduleFileExtensions": [
