--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,6 +25,7 @@
     "db:studio": "npx prisma studio",
     "db:push": "npx prisma db push",
     "db:seed": "tsx scripts/seed.ts",
+    "db:create-emotional-templates": "tsx scripts/create-emotional-feedback-template.ts",
     "db:version": "npx prisma -v",
     "swagger:export": "npm run build && tsx scripts/export-swagger-minimal.ts",
     "swagger:export:yaml": "npm run swagger:export",
