feat: implement news feed functionality with post creation, reactions, and comments
feat: add fake positions page with attendance tracking and analytics

feat: create news page with post filtering, creation, and refreshing capabilities

feat: develop security dashboard with alerts, camera streams, and emergency management

feat: define types for fake positions, news feed, and security data structures

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@tanstack/react-virtual": "^3.13.12",
+    "emoji-picker-react": "^4.13.2",
+    "framer-motion": "^12.23.9",
+    "react-dropzone": "^14.3.8",
+    "react-intersection-observer": "^9.16.0"
+  },
   "devDependencies": {
     "lerna": "^8.2.2"
   }
