--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^11.18.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "marked": "^16.1.1",
     "react": "^18.3.1",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/socket.io-client": "^3.0.0",
