--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,8 +21,10 @@
     "marked": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
@@ -33,6 +35,8 @@
     "@types/jspdf": "^1.3.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-grid-layout": "^1.3.5",
+    "@types/react-resizable": "^3.0.8",
     "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
