feat: add KPI automation, parent chats, and student comments system
- Add KPI automation with scheduler and settings management
- Implement parent chat functionality and setup scripts
- Add student comments and remarks with CRUD operations
- Create modals for comment/remark management and KPI settings
- Add parent service and MyChildren page for parent portal
- Clean up Prisma migrations and update schema
- Update ESLint config and fix TypeScript warnings
- Add comprehensive DTOs for new features

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,7 +31,7 @@
     "swagger:export": "npm run build && tsx scripts/export-swagger-minimal.ts",
     "swagger:export:yaml": "npm run swagger:export",
     "docs:generate": "npm run swagger:export && echo '📚 Документация обновлена в папке docs/'",
-    "postinstall": "npx npm-run-all db:generate docs:generate"
+    "postinstall": "npx npm-run-all db:generate"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
