feat: add public files controller for serving images
- Implemented PublicFilesController to handle requests for public images by ID.
- Added validation to ensure only image files are served.
- Included support for both remote URLs and local file paths.
- Set appropriate response headers for image files.

feat: create QuizEditor component for managing quiz questions

- Developed QuizEditor component to allow users to add, edit, and delete quiz questions and answers.
- Implemented drag-and-drop functionality for reordering questions.
- Integrated RichTextEditor for question and answer text input.
- Added image upload support for questions and answers.

feat: implement QuizMaterialEditor for quiz creation and editing

- Created QuizMaterialEditor component to manage quiz settings and questions.
- Added validation for quiz data before saving.
- Integrated image upload functionality for quiz questions.
- Displayed statistics for the number of questions and total points.

feat: build RichTextEditor with image and link support

- Developed RichTextEditor component using Tiptap for rich text editing.
- Included toolbar for formatting options and image/link insertion.
- Integrated custom Math extension for LaTeX rendering.

feat: add Math extension for rendering mathematical expressions

- Implemented Math extension for Tiptap to support LaTeX expressions.
- Created MathNodeView for rendering and editing math content.
- Integrated KaTeX for rendering mathematical formulas in the editor.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,12 +14,20 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
+    "@tiptap/core": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-mathematics": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "axios": "^1.10.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^11.18.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "katex": "^0.16.22",
     "lucide-react": "^0.462.0",
     "marked": "^16.1.1",
     "react": "^18.3.1",
