--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -52,6 +52,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
