--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.10.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.18.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
