--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "2.7.4",
+  "version": "2.7.4-568d82",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
