--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "2.7.4",
+  "version": "2.7.4-568d82",
   "npmClient": "pnpm",
   "packages": [
     "apps/*"
