--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "2.7.4-568d82",
+  "version": "2.7.4",
   "description": "",
   "author": "",
   "private": true,
