--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,7 @@
     "postinstall": "npx npm-run-all db:generate"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -57,6 +58,7 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
     "prisma": "^6.11.1",
@@ -81,6 +83,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.17.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
