--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -38,6 +38,7 @@
     "react-player": "^2.16.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
