--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -47,6 +47,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.5",
     "@prisma/client": "6.11.1",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/blob": "^1.1.1",
