--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,7 @@
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
+    "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.10.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
@@ -38,6 +39,7 @@
     "react-player": "^2.16.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.0",
+    "react-simple-maps": "^3.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
