--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -60,7 +60,9 @@
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
-    "pdf-parse": "^1.1.1",
+  "pdf-parse": "^1.1.1",
+  "openai": "^4.70.0",
+  "zod": "^3.23.8",
     "pdfkit": "^0.17.1",
     "prisma": "^6.11.1",
     "puppeteer": "^24.15.0",
