--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -51,6 +51,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/blob": "^1.1.1",
+    "ajv": "8",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
