--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.1",
+    "dotenv-expand": "^12.0.2",
     "face-api.js": "^0.22.2",
     "framer-motion": "^11.18.2",
     "jspdf": "^3.0.1",
