--- a/package.json
+++ b/package.json
@@ -24,5 +24,19 @@
     "dotenv": "^17.2.1",
     "lerna": "^8.2.2"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@nestjs/core",
+      "@prisma/client",
+      "@prisma/engines",
+      "@scarf/scarf",
+      "@swc/core",
+      "core-js",
+      "esbuild",
+      "nx",
+      "prisma",
+      "puppeteer"
+    ]
+  },
   "packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
 }
