feat: implement notification system with backend and frontend integration
- Added NotificationsService to ParentsModule and QuizModule for handling notifications.
- Enhanced QuizAttemptService to notify students of quiz results.
- Updated QuizService to send notifications when quizzes are activated.
- Introduced SystemSettings page for managing notification settings and sending test notifications.
- Created NotificationTester component for testing notification sending functionality.
- Added SSE support for real-time notifications in NotificationProvider.
- Documented notification testing procedures in NOTIFICATION-TESTING.md.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,7 @@
     "tenants:orchestrate": "tsx scripts/tenant-tools/orchestrate.ts",
     "db:create-emotional-templates": "tsx scripts/create-emotional-feedback-template.ts",
     "db:create-admin": "tsx scripts/create-admin-user.ts",
+    "test:notifications": "tsx test-notifications.ts",
     "db:version": "npx prisma -v",
     "swagger:export": "npm run build && tsx scripts/export-swagger-minimal.ts",
     "swagger:export:yaml": "npm run swagger:export",
@@ -60,6 +61,7 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "openai": "^4.70.0",
     "pdf-parse": "^1.1.1",
