--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,7 +42,7 @@
     "@nestjs/devtools-integration": "^0.2.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.6",
     "@nestjs/platform-socket.io": "^11.1.5",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
@@ -58,6 +58,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
@@ -84,7 +85,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.23",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
     "@types/multer": "^2.0.0",
