feat(storage): add local, S3, and Vercel Blob storage adapters with integration tests
- Implemented LocalStorageAdapter for local file storage with upload, delete, and availability checks.
- Developed S3StorageAdapter for AWS S3 integration, including upload, delete, and availability checks.
- Created VercelBlobAdapter for file storage on Vercel Blob with similar functionality.
- Added integration tests for S3StorageAdapter to verify connectivity and file operations.
- Included public access testing script for S3 storage.
- Documented setup instructions for S3 storage in SRVSTORAGE_SETUP.md.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,6 +35,7 @@
     "docs:generate": "npm run swagger:export && echo '📚 Документация обновлена в папке docs/'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
